<resources>
    <string name="app_name">TransTracks</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="unknown">Unknown</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="send_to">Send to</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome to Trans Tracks, it\'s easy to get started but before you do we wanted to check these settings with you. How do they look?</string>
    <string name="looks_good">Looks Good</string>
    <string name="change_setting">Change Settings</string>
    <string name="warning_title">Warning</string>
    <string name="warning_message">You have a Lock Code set but haven\'t set up an account to be able to recover access if you forget your code.</string>
    <string name="create_account">Create Account</string>
    <string name="risk_it">Risk It</string>
    <string name="take_photo">Take Photo</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="previous_record">Previous Record</string>
    <string name="next_record">Next Record</string>
    <string name="start_date">Start: %1$s</string>
    <string name="current_date">Current: %1$s</string>
    <string name="face_gallery">Face Gallery</string>
    <string name="extra_photos">+%1$d</string>
    <string name="body_gallery">Body Gallery</string>
    <string name="add_face_photo">Add face photo</string>
    <string name="add_body_photo">Add body photo</string>
    <string name="permission_required">Permission Required</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="storage_permission_required_message">External Storage permission is required for us to access the photos on your device.</string>
    <string name="storage_permission_disabled">External Storage permission has been denied. You will need to enable it to use this feature.</string>
    <string name="camera_permission_required_message">Camera permission is required for us to take a photo.</string>
    <string name="camera_permission_disabled">Cannot take photo permission has been denied.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="start_day">Start Day</string>
    <plurals name="years">
        <item quantity="one">%1$d Year</item>
        <item quantity="other">%1$d Years</item>
    </plurals>
    <plurals name="months">
        <item quantity="one">%1$d Month</item>
        <item quantity="other">%1$d Months</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%1$d Day</item>
        <item quantity="other">%1$d Days</item>
    </plurals>
    <string name="settings">Settings</string>
    <string name="transtracks_account">TransTracks Account</string>
    <string name="transtracks_account_description">Create a free account. Backs up your settings and allows you to reset your app lock password.</string>
    <string name="account_name_label">Name:</string>
    <string name="account_email_label">Email:</string>
    <string name="change_password">Change Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="sign_in_error">An error occurred signing in, please try again</string>
    <string name="sign_out_error">An error occurred signing out, please try again</string>
    <string name="passwordResetFailed">An error occurred trying to send the password reset</string>
    <string name="passwordResetSuccess">You have been sent a password reset email, follow its instruction to reset your password</string>
    <string name="unableToResetPassword">Unable to reset your password</string>
    <string name="unableToUpdateEmail">Unable to update your email address</string>
    <string name="unableToUpdateName">Unable to update your account name</string>
    <string name="update_account_name">Update Account Name</string>
    <string name="enter_account_name">Enter account name</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="updating_name">Updating account name</string>
    <string name="update_email_address">Update Email Address</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="email_must_be_valid">Email must be valid</string>
    <string name="email_in_use">This email is already in use by another account</string>
    <string name="updating_email">Updating email address</string>
    <string name="session_expired">Session Expired</string>
    <string name="session_expired_message">Your session has expired, please log back in</string>
    <string name="start_date_label">Start Date:</string>
    <string name="theme_label">Theme:</string>
    <string name="lock_label">Lock Mode:</string>
    <string name="lock_delay_label">Lock Delay:</string>
    <string name="app_version_label">App Version:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">© 2018 - %1$s by TransTracks, All rights reserved</string>
    <string name="lock_description">Require a password to access the app</string>
    <string name="about_transtracks_title">About TransTracks</string>
    <string name="about_transtracks_description">TransTracks is a passion project that doesn\'t have a full-time development team. We try to fix things up and make improvements when we can. If you would like to contribute we would love to have the help.</string>
    <string name="contribute">Contribute</string>
    <string name="select_theme">Select Theme</string>
    <string name="blue">Blue</string>
    <string name="pink">Pink</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="select_lock_mode">Select Lock Mode</string>
    <string name="disabled">Disabled</string>
    <string name="enabled_normal">Enabled (Normal)</string>
    <string name="enabled_trains">Enabled (Train Tracks)</string>
    <string name="select_lock_delay">Select Lock Delay</string>
    <string name="instant">Instant</string>
    <string name="one_minute">One minute</string>
    <string name="two_minutes">Two minutes</string>
    <string name="five_minutes">Five minutes</string>
    <string name="fifteen_minutes">Fifteen minutes</string>
    <string name="data_label">Data:</string>
    <string name="_import">Import</string>
    <string name="export">Export</string>
    <string name="anonymous_analytics">Collect Anonymous Analytics:</string>
    <string name="anonymous_crash_reports">Collect Anonymous Crash Reports:</string>
    <string name="support_ads">Support Via Ads:</string>
    <string name="ad_consent_label">Ad Consent:</string>
    <string name="redo_consent_form">Redo consent form</string>
    <string name="unable_to_show_form">Unable to show GDPR consent, try again later or you may be outside of EU or UK</string>
    <string name="enabled">Enabled</string>
    <string name="import_info_title">How to Import</string>
    <string name="import_info_message">Open the .ttbackup with TransTracks from your file browser.\n\nNot all file browsers work.\n\nIf you need a browser I suggest ES File Manager.</string>
    <string name="go_to_play_store">Get browser</string>
    <string name="importing_backup_file">Importing backup file…</string>
    <string name="import_error">We were unable to open that backup file to import. Please ensure you are opening a valid .ttbackup file.</string>
    <string name="import_warning_title">Import file</string>
    <string name="import_warning_message">You are about to import data from a backup file. This will overwrite some of your settings and any duplicate data. Would you like to continue?</string>
    <string name="import_failure">An error occurred importing your file, email contact@transtracks.app for help</string>
    <string name="import_complete_success">Import Success</string>
    <string name="import_partial_success_title">Partial import success</string>
    <string name="import_partial_success_description">Some of the data from your import file wasn\'t imported correctly. Issues importing:\n%1$s\n\nEmail contact@transtracks.app for help</string>
    <string name="set_password">Set Password</string>
    <string name="settings_conflict">Settings Conflict</string>
    <string name="settings_conflict_message">Looks like your local settings are a little different from the ones on our server. Please choose which are correct:</string>
    <string name="lock_code_label">Lock Code:</string>
    <string name="use_local_code">Use local code</string>
    <string name="use_server_code">Use server code</string>
    <string name="no_code">No code</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="delete_account_warning_title">Delete Account Permanently</string>
    <string name="delete_account_warning_message">This will delete your account and all synchronised data. Once deleted it cannot be recovered.\n\nAre you sure you want to PERMANENTLY delete your TransTrack account?</string>
    <string name="deleting_account">Deleting account</string>
    <string name="delete_failed">Error occurred trying to delete your account</string>
    <string name="delete_success">Account Deleted</string>
    <string name="log_in_before_delete">Please log in again before deleting</string>
    <string name="creating_backup_file">Creating backup file…</string>
    <string name="error_creating_backup_file">An error occurred creating the backup file. If this problem persists please contact me on contact@transtracks.app</string>
    <string name="select_photo">Select Photo</string>
    <string name="view_albums">View Albums</string>
    <string name="select_album">Select Album</string>
    <string name="external_galleries">External Galleries</string>
    <plurals name="photos">
        <item quantity="one">%1$d Photo</item>
        <item quantity="other">%1$d Photos</item>
    </plurals>
    <string name="save_to_app">Save to App</string>
    <string name="assign_photo">Assign Photo</string>
    <string name="assign_photo_count">Assign Photo (%1$d/%2$d)</string>
    <string name="date_label">Date:</string>
    <string name="type_label">Type:</string>
    <string name="save_photo">Save Photo</string>
    <string name="skip_photo">Skip Photo</string>
    <string name="select_type">Select Type</string>
    <string name="face">Face</string>
    <string name="body">Body</string>
    <string name="saving_photo">Saving Photo</string>
    <string name="saved_photo">Successfully saved photo</string>
    <string name="skipped_photo">Skipped photo</string>
    <string name="error_saving_photo">An error occurred saving this photo</string>
    <string name="user_photos_date">Use the photo\'s date</string>
    <string name="photo_details">Photo Details</string>
    <string name="photo_detail_replacement" translatable="false">%1$s - %2$s</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="share_image_using">Share image using…</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="update_photo">Update Photo</string>
    <string name="train_tracks_title">Train Tracks</string>
    <string name="train_tracks_message">Enter the train\'s reporting number to find it. Depending on where you are they can be a mixture of letters an numbers, e.g. 2MS6 is the sixth Melbourne to Sydney ARTC train leave on Monday.</string>
    <string name="enter_train_reporting_number">Enter Train Reporting Number</string>
    <string name="search">Search</string>
    <string name="unlock_with_password">Unlock with Password</string>
    <string name="enter_password">Enter your password</string>
    <string name="unlock">Unlock</string>
</resources>