<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright © 2018 TransTracks. All rights reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <TextView
        android:id="@+id/welcome_start_label"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="0dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/start_date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_start_date"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@id/welcome_start_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/welcome_start_label"
        app:layout_constraintTop_toTopOf="@id/welcome_start_label"
        tools:text="15/08/2017" />

    <TextView
        android:id="@+id/welcome_lock_label"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingEnd="0dp"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:text="@string/lock_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_start_label" />

    <TextView
        android:id="@+id/welcome_lock_type"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:paddingBottom="8dp"
        android:paddingEnd="16dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:text="@string/disabled"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintBottom_toBottomOf="@id/welcome_lock_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/welcome_lock_label"
        app:layout_constraintTop_toTopOf="@id/welcome_lock_label" />
</androidx.constraintlayout.widget.ConstraintLayout>
