<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2018 TransTracks. All rights reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<com.drspaceboo.transtracks.ui.assignphoto.AssignPhotoView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/assign_photo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/assign_photo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/assign_photo"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white_text_selector" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/assign_photo_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/assign_photo_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assign_photo_toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent_white_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/assign_photo_date" />

    <TextView
        android:id="@+id/assign_photo_date_label"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        android:text="@string/date_label"
        android:textColor="@color/transparent_white_90_text_selector"
        app:layout_constraintBottom_toBottomOf="@id/assign_photo_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/assign_photo_date" />

    <Button
        android:id="@+id/assign_photo_date"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toTopOf="@id/assign_photo_type"
        app:layout_constraintEnd_toStartOf="@id/assign_photo_use_photo_date"
        app:layout_constraintStart_toEndOf="@id/assign_photo_date_label"
        app:layout_constraintTop_toBottomOf="@id/assign_photo_image"
        tools:text="15/08/2017" />

    <ImageButton
        android:id="@+id/assign_photo_use_photo_date"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/user_photos_date"
        android:src="@drawable/ic_photo_date"
        app:layout_constraintBottom_toBottomOf="@id/assign_photo_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/assign_photo_date"
        app:layout_constraintTop_toTopOf="@id/assign_photo_date" />

    <TextView
        android:id="@+id/assign_photo_type_label"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="8dp"
        android:text="@string/type_label"
        android:textColor="@color/transparent_white_90_text_selector"
        app:layout_constraintBottom_toBottomOf="@+id/assign_photo_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/assign_photo_type" />

    <Button
        android:id="@+id/assign_photo_type"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:paddingStart="8dp"
        android:paddingTop="10dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toTopOf="@id/assign_photo_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/assign_photo_type_label"
        app:layout_constraintTop_toBottomOf="@id/assign_photo_date"
        tools:text="Body" />

    <Button
        android:id="@+id/assign_photo_save"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save_photo"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assign_photo_type" />

</com.drspaceboo.transtracks.ui.assignphoto.AssignPhotoView>
